# cillow

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  client.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  server.Dockerfile  server.py  sitemap.xml  tox.ini
.github/workflows/: main.yml
cillow/: __init__.py  client.py  code_meta.py  importhook.py  interpreter.py  logger.py  modutils.py  shell.py  switchable.py  types.py
cillow/patch/: __init__.py  prebuilt.py
cillow/server/: __init__.py  _process.py  client_manager.py  request_worker.py
cookbooks/: README.md  index.html
docs/: index.md  sandboxing_the_server.md  supported_languages.md
docs/quickstart/: connecting_LLM_&_Frameworks.md  custom_patches.md  using_cillow.md
docs/sdk_reference/: client.md  interpreter.md  patch.md  prebuilt_patches.md  server.md  switchable.md
docs/stylesheets/: extra.css
quickstart/connecting_LLM_&_Frameworks/: index.html
quickstart/custom_patches/: index.html
quickstart/using_cillow/: index.html
sandboxing_the_server/: index.html
sdk_reference/client/: index.html
sdk_reference/interpreter/: index.html
sdk_reference/patch/: index.html
sdk_reference/prebuilt_patches/: index.html
sdk_reference/server/: index.html
sdk_reference/switchable/: index.html
search/: search_index.json
supported_languages/: index.html
tests/: test_code_meta.py  test_importhook.py  test_interpreter.py  test_patch.py  test_prebuilt_patches.py  test_server_client_manager.py  test_server_interpreter_process.py  test_server_request_worker_thread.py  test_shell.py  test_switchable.py
